force-app/main/default/objects/Affiliate_Offer_Link__c/Affiliate_Offer_Link__c.object-meta.xml
<CustomObject>
    <label>Affiliate Offer Link</label>
    <nameField>
        <label>AffiliateOfferLink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affiliate Offer Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>