force-app/main/default/objects/Affiliate_Offer_Link__c/fields/Affiliate_Offer__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliate Offer</label>
    <referenceTo>Affiliate_Offer__c</referenceTo>
    <relationshipLabel>Affiliate Offer Links</relationshipLabel>
    <relationshipName>Affiliate_Offer_Links</relationshipName>
    <type>Lookup</type>
</CustomField>