force-app/main/default/objects/Affiliate_Offer_Link__c/fields/Sub1__c.field-meta.xml
<CustomField>
    <fullName>Sub1__c</fullName>
    <label>Sub1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>