force-app/main/default/objects/Affiliate_Offer_Link__c/fields/Sub2__c.field-meta.xml
<CustomField>
    <fullName>Sub2__c</fullName>
    <label>Sub2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>