force-app/main/default/objects/Affiliate_Offer_Link__c/fields/Sub3__c.field-meta.xml
<CustomField>
    <fullName>Sub3__c</fullName>
    <label>Sub3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>