force-app/main/default/objects/Affiliate_Offer_Link__c/fields/Utm_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Utm_Campaign__c</fullName>
    <label>Utm Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>