force-app/main/default/objects/Affiliate_Offer_Link__c/fields/Utm_Content__c.field-meta.xml
<CustomField>
    <fullName>Utm_Content__c</fullName>
    <label>Utm Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>