force-app/main/default/objects/Affiliate_Offer_Link__c/fields/Utm_Term__c.field-meta.xml
<CustomField>
    <fullName>Utm_Term__c</fullName>
    <label>Utm Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>